﻿Version [Version Number] ([Friendly Version Number]) [Release Date]

Version vNext
	General description:

	Code Changes:

	Bug fixes:
		-[Core] The exception message that was thrown in case the delegate of a type could not be compiled, 
		 incorrectly described the UnregisteredTypeEventArgs.Register method, which was confusing.


Version 1.3.1.11358 (v1.3.1 RTM) 2011-12-23
	General description:
		RegisterOpenGenericDecorator extension methods added to the SimpleInjector.Extensions project.

	Code Changes:
		-[Extensions] New RegisterManyForOpenGeneric overloads added.
		-[Extensions] RegisterOpenGenericDecorator extension methods have been added.


Version 1.3.0.11343 (v1.3 RTM) 2011-12-09
	General description:
		This release adds a few features and fixes two bugs in the core library. The most important new
		feature is the addition of a ExpresionBuilt event, which allows users to alter the way types are 
		created by the container. This enables scenarios as interception, context based injection, and 
		wrapping types with decorators.
			
	Code Changes:
		-[Core] A new overload to the Container.GetRegistration() method has been added. This overload allows
		 users to signal whether the method should throw or return null (what the original overload does).
		 Since the GetRegistration is the only method in the system that both builds and returns
		 IInstanceProducers, it is very convenient when it can throw, because this makes some scenario's
		 using the ExpressionBuilt event much cleaner, with less code.
		-[Core] All exception messages now display the names of generic types in short C# notation. 
		 For instance, messages will now show a name such as IEnumerable<IComparable<Int32>> instead of the
		 unreadable System.Collections.Generic.IEnumerable`1[System.IComparable`1[System.Int32]].
		-[Core] New constructor overload added to the Container allowing to change the behavior of the