@@ -4,8 +4,13 @@ Version vNext
 	General description:
 
 	Code Changes:
+		-[Core] The internal Container.GetInitializerFor<T> method has been made public and renamed to
+		 BuildInitializerFor<T>. This enables certain specialized scenarios. The main (external) consumer of
+		 this method is the RegisterManyForOpenGeneric method of the Extensions project.
 
 	Bug fixes:
+		-[Extensions] Decorators created using the RegisterManyForOpenGeneric extension methods now get
+		 initialized with any registered initializers (if any).
 		-[Core] The exception message that was thrown in case the delegate of a type could not be compiled, 
 		 incorrectly described the UnregisteredTypeEventArgs.Register method, which was confusing.
 
